# HH-vacancies-parsing

./: .env.example  .gitignore  README.md  config.py  decorators.py  main.py  models.py  pyproject.toml
